src/snapshots/smithereens__parser__tests__crosslink-2.snap
---
source: src/parser.rs
assertion_line: 274
expression: "crosslink(\"=\")?"
---
(
    "",
    Ambiguous,
)
