src/snapshots/smithereens__parser__tests__crosslink-3.snap
---
source: src/parser.rs
assertion_line: 276
expression: "crosslink(\"=4>3=\")?"
---
(
    "",
    Explicit(
        [
            (
                4,
                DonatesTo,
                3,
            ),
        ],
    ),
)
