src/snapshots/smithereens__parser__tests__crosslink-4.snap
---
source: src/parser.rs
assertion_line: 284
expression: "crosslink(\"=3<4=\")?"
---
(
    "",
    Explicit(
        [
            (
                3,
                AcceptsFrom,
                4,
            ),
        ],
    ),
)
