src/snapshots/smithereens__parser__tests__crosslink.snap
---
source: src/parser.rs
assertion_line: 272
expression: "crosslink(\"~\")?"
---
(
    "",
    Glycosidic,
)
