src/snapshots/smithereens__parser__tests__glycan-2.snap
---
source: src/parser.rs
assertion_line: 201
expression: "glycan(\"m\")?"
---
(
    "",
    [
        (
            'm',
            None,
        ),
    ],
)
