src/snapshots/smithereens__parser__tests__glycan-3.snap
---
source: src/parser.rs
assertion_line: 203
expression: "glycan(\"gm\")?"
---
(
    "",
    [
        (
            'g',
            None,
        ),
        (
            'm',
            None,
        ),
    ],
)
