src/snapshots/smithereens__parser__tests__glycan-4.snap
---
source: src/parser.rs
assertion_line: 205
expression: "glycan(\"gm(-Ac)\")?"
---
(
    "",
    [
        (
            'g',
            None,
        ),
        (
            'm',
            Some(
                [
                    Remove(
                        "Ac",
                    ),
                ],
            ),
        ),
    ],
)
