src/snapshots/smithereens__parser__tests__glycan-5.snap
---
source: src/parser.rs
assertion_line: 216
expression: "glycan(\"g(+Am)m(-Ac)\")?"
---
(
    "",
    [
        (
            'g',
            Some(
                [
                    Add(
                        "Am",
                    ),
                ],
            ),
        ),
        (
            'm',
            Some(
                [
                    Remove(
                        "Ac",
                    ),
                ],
            ),
        ),
    ],
)
