src/snapshots/smithereens__parser__tests__glycan-6.snap
---
source: src/parser.rs
assertion_line: 227
expression: "glycan(\"gm(-Ac,+Am)\")?"
---
(
    "",
    [
        (
            'g',
            None,
        ),
        (
            'm',
            Some(
                [
                    Remove(
                        "Ac",
                    ),
                    Add(
                        "Am",
                    ),
                ],
            ),
        ),
    ],
)
