src/snapshots/smithereens__parser__tests__glycan.snap
---
source: src/parser.rs
assertion_line: 199
expression: "glycan(\"g\")?"
---
(
    "",
    [
        (
            'g',
            None,
        ),
    ],
)
