src/snapshots/smithereens__parser__tests__lateral_chain-2.snap
---
source: src/parser.rs
assertion_line: 263
expression: "lateral_chain(\"[G]\")?"
---
(
    "",
    [
        (
            'G',
            None,
        ),
    ],
)
